--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,8 @@
 <exclude>**/com/colin/filter/*</exclude>
 <exclude>**/com/colin/security/*</exclude>
 <exclude>**/com/colin/aspect/*</exclude>
+ <exclude>**/com.colin.filter</exclude>
+  <exclude>**/com/colin/repo</exclude>
 </excludes>
 </configuration>
 </plugin>
