--- a/pom.xml
+++ b/pom.xml
@@ -119,57 +119,42 @@
 </excludes>
 </configuration>
 </plugin>
-<plugin>
-<groupId>org.jacoco</groupId>
-<artifactId>jacoco-maven-plugin</artifactId>
-<executions>
-<!--  prepare agent for measuring unit tests  -->
-<execution>
-<id>prepare-unit-tests</id>
-<goals>
-<goal>prepare-agent</goal>
-</goals>
-<configuration>
-<append>true</append>
-<destFile>${sonar.jacoco.reportPath}</destFile>
-<!--  Sets the VM argument line used when unit tests are run.  -->
-<propertyName>surefireArgLine</propertyName>
-</configuration>
-</execution>
-<execution>
-<id>report</id>
-<phase>prepare-package</phase>
-<goals>
-<goal>report</goal>
-</goals>
-</execution>
-</executions>
-<configuration>
-<excludes>
-<exclude>**/com/colin/SpringCrudApplication.class</exclude>
-<exclude>**/com/colin/models/*</exclude>
-<exclude>**/com/colin/repo/*</exclude>
-<exclude>**/com/colin/controller/JwtAuthController.class</exclude>
-<exclude>**/com/colin/controller/PaymentGatewayController.class</exclude>
-<exclude>**/com/colin/service/JwtUserDetailsService.class</exclude>
-<exclude>**/com/colin/service/StripeService.class</exclude>
-<exclude>**/com/colin/filter/*</exclude>
-<exclude>**/com/colin/security/*</exclude>
-<exclude>**/com/colin/aspect/*</exclude>
-</excludes>
-</configuration>
-</plugin>
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-surefire-plugin</artifactId>
-<configuration>
-<printSummary>false</printSummary>
-<redirectTestOutputToFile>true</redirectTestOutputToFile>
-<forkCount>3</forkCount>
-<reuseForks>true</reuseForks>
-<argLine>${surefireArgLine} -Xmx1024m -noverify</argLine>
-</configuration>
-</plugin>
-</plugins>
+  
+    <plugins>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.7.1.201405082137</version>
+            <executions>
+                <execution>
+                    <id>default-prepare-agent</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <excludes>
+                    <exclude>**/com/colin/SpringCrudApplication.class</exclude>
+                    <exclude>**/com/colin/models/*</exclude>
+                    <exclude>**/com/colin/repo/*</exclude>
+                    <exclude>**/com/colin/controller/JwtAuthController.class</exclude>
+                    <exclude>**/com/colin/controller/PaymentGatewayController.class</exclude>
+                    <exclude>**/com/colin/service/JwtUserDetailsService.class</exclude>
+                    <exclude>**/com/colin/service/StripeService.class</exclude>
+                    <exclude>**/com/colin/filter/*</exclude>
+                    <exclude>**/com/colin/security/*</exclude>
+                    <exclude>**/com/colin/aspect/*</exclude>
+                </excludes>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.4.3</version>
+        </plugin>
+    </plugins>    
+  
+
 </build>
 </project>
